// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should render tabs component correctly 1`] = `
<div>
  <div
    class="sc-VigVT ecikvh"
  >
    <div
      class="sc-jTzLTM krCtZM"
    >
      <div
        class="sc-fjdhpX ilIfQe"
      >
        <div
          class="sc-jzJRlG tab__button--active xPqiB"
          data-index="0"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 1
          </div>
        </div>
      </div>
      <div
        class="sc-fjdhpX ilIfQe"
      >
        <div
          class="sc-jzJRlG xPqiB"
          data-index="1"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 2
          </div>
        </div>
      </div>
      <div
        class="sc-fjdhpX ilIfQe"
      >
        <div
          class="sc-jzJRlG xPqiB"
          data-index="2"
        >
          <div
            class="text text--primary sc-ifAKCX kEFgxZ"
          >
            Test tab item 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should render tabs component correctly with props for text of tabs 1`] = `
<div>
  <div
    class="sc-VigVT ecikvh"
  >
    <div
      class="sc-jTzLTM krCtZM"
    >
      <div
        class="sc-fjdhpX ilIfQe"
      >
        <div
          class="sc-jzJRlG tab__button--active xPqiB"
          data-index="0"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 1
          </div>
        </div>
      </div>
      <div
        class="sc-fjdhpX ilIfQe"
      >
        <div
          class="sc-jzJRlG xPqiB"
          data-index="1"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 2
          </div>
        </div>
      </div>
      <div
        class="sc-fjdhpX ilIfQe"
      >
        <div
          class="sc-jzJRlG xPqiB"
          data-index="2"
        >
          <div
            class="text text--accent text--alert text--primary sc-ifAKCX iQFpqp"
          >
            Test tab item 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
